[IMP] added properties in the creation of automated emails

--- a/pms/views/pms_automated_mails_views.xml
+++ b/pms/views/pms_automated_mails_views.xml
@@ -18,6 +18,11 @@
                                 <field name="active" widget="boolean_toggle" />
                                 <field name="template_id" />
                                 <field name="action" />
+                                <field
+                                    name="pms_property_ids"
+                                    widget="many2many_tags"
+                                    options="{'no_create': True,'no_open': True}"
+                                />
                             </group>
                         </div>
                         <div class="col-5">
