[DONE] 14.0 improve compute folio sale lines and name invoice lines on change qty (#78)
* [IMP] pms: improve compute sale lines & generate new names when qty is modified @ invoice lines

* [ADD] pms: add tests for compute folio sale lines

* [FIX] pms: fix old name for av. plan & common base test class

* [FIX] pms: pre-commit fix

* [FIX] pms: fix view according to pr code review

--- a/pms/views/account_move_views.xml
+++ b/pms/views/account_move_views.xml
@@ -8,6 +8,9 @@
                 <field name="folio_ids" widget="many2many_tags" />
                 <field name="pms_property_id" invisible="1" />
             </xpath>
+            <xpath expr="//field[@name='quantity']" position="before">
+                <field name="name_changed_by_user" invisible="1" />
+            </xpath>
         </field>
     </record>
 
