--- a/pms/views/pms_room_type_class_views.xml
+++ b/pms/views/pms_room_type_class_views.xml
@@ -28,7 +28,7 @@
                                 options="{'no_create': True,'no_open': True}"
                             />
                             <field name="name" />
-                            <field name="code_class" />
+                            <field name="default_code" />
                         </group>
                     </group>
                     <group colspan="2">
@@ -47,7 +47,7 @@
             <tree string="Room Class">
                 <field name="sequence" widget="handle" />
                 <field name="name" />
-                <field name="code_class" />
+                <field name="default_code" />
                 <field name="room_type_ids" />
             </tree>
         </field>
